--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,42 @@
+@import url("https://fonts.googleapis.com/css2?family=Teko&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Geostar&display=swap");
+@import url("https://fontlibrary.org/face/dseg14");
+
+html,
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  background: #000;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.wrapper,
+.canvas,
+.gesture-wrapper,
+.offcanvas,
+.offcanvas__main,
+.offcanvas__menu,
+.offcanvas__clock-wrapper {
+  height: 100%;
+}
+
+.app {
+  background: #000;
+  color: #fff;
+  font-family: sans-serif;
+  height: 100%;
+  user-select: none;
+  overflow: hidden;
+}
+
+.app__starter {
+  font-size: 120px;
+  position: absolute;
+  inset: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.9)
 }
